tests/snapshots/options__insta_opt_tac_with_header_lines.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  d                                                                             "
"> e                                                                             "
"  b                                                                             "
"  a                                                                             "
"  5/3                                                                        0/0"
">                                                                               "
