tests/snapshots/options__insta_opt_with_nth_preview.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
"                                        │Xf1Y                                   "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> f2,f3,f4                              │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
